# Chess-Analyzer

./: .gitignore  Cargo.toml  README.md
assets/: LICENSE
src/: back.rs  clear_indicators.rs  clipboard.rs  core.rs  drag.rs  drag_end.rs  drop.rs  engine.rs  fen.rs  file_drop.rs  forward.rs  history.rs  main.rs  paste.rs  paste_clipboard.rs  pgn.rs  play.rs  select.rs  sound.rs  startup.rs  update.rs  utils.rs
src/analysis/: engine.rs  fen.rs  file_drop.rs  mod.rs  paste_clipboard.rs  pgn.rs  startup.rs
src/audio/: mod.rs  startup.rs  update.rs
src/drag_drop/: drop.rs  mod.rs
src/history/: back.rs  first.rs  forward.rs  last.rs  mod.rs  next.rs  push_entry_from_pos.rs  setup_from_entry.rs  startup.rs
src/picking/: drag.rs  drag_end.rs  drop.rs  mod.rs  select.rs
src/ui/: clear_indicators.rs  get_piece_texture.rs  mod.rs  spawn_engine_indicator.rs  spawn_select_indicator.rs  startup.rs  update.rs
