[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.14.0"
bevy_mod_picking = "0.20.1"
bevy_window = "0.14.2"
shakmaty = "0.27.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
