[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.27.0"
bevy_ecs_tilemap = "0.14.0"
bevy_mod_picking = "0.20.1"
bevy_window = "0.14.2"
copypasta = "0.10.1"
pgn-reader = "0.26.0"
shakmaty = "0.27.2"
uci = "0.2.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
